--- a/app/index/style.scss
+++ b/app/index/style.scss
@@ -1,10 +1,11 @@
 .index
 {
   section.main-section {
-    max-width: 40em;
     margin: auto;
   }
   .testimonials {
+    background-color: white;
+    width: auto;
     .title {
       text-align: center;
       padding: 1em;
