--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,12 +6,7 @@
 // @import "ember-paper-swiper";
 
 @import "settings";
-
 @import "pods";
-
-.row {
-  max-width: 45em;
-}
 
 body {
   font-family: 'NotoSans', verdana, sans-serif;
